# y-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN_OVERVIEW.md  DESIGN_RULE.md  Dockerfile  Dockerfile.appimage  GEMINI.md  README.md  TODO.md  VISION.md  clippy.toml  deny.toml  docker-compose.yml  flake.nix  package.nix
crates/y-agent/: Cargo.toml
crates/y-agent-core/: Cargo.toml
crates/y-agent-core/src/: channel.rs  checkpoint.rs  dag.rs  executor.rs  lib.rs
crates/y-agent/src/: lib.rs
crates/y-agent/tests/: integration.rs  persistent_dynamic_proposals.rs  persistent_dynamic_store.rs
crates/y-bot/: Cargo.toml
crates/y-bot/src/: discord.rs  discord_gateway.rs  error.rs  feishu.rs  lib.rs  telegram.rs
crates/y-browser/: Cargo.toml
crates/y-browser/src/: actions.rs  cdp_client.rs  config.rs  launcher.rs  lib.rs  security.rs  session.rs  snapshot.rs  timeouts.rs  tool.rs
crates/y-cli/: Cargo.toml
crates/y-cli/benches/: e2e_bench.rs
crates/y-cli/knowledge/: knowledge_collections.json
crates/y-cli/src/: bare_prompt.rs  config.rs  main.rs  orchestrator.rs  output.rs  slash_files.rs  wire.rs
crates/y-cli/tests/: chat_flow.rs  checkpoint_recovery.rs  multi_agent.rs  session_lifecycle.rs  tool_execution.rs
crates/y-context/: Cargo.toml
crates/y-context/src/: compaction.rs  context_manager.rs  context_status.rs  enrichment.rs  guard.rs  handoff.rs  inject_bootstrap.rs  inject_memory.rs  inject_skills.rs  inject_tools.rs  knowledge_provider.rs  lib.rs  load_history.rs  middleware_adapter.rs  pipeline.rs  recall.rs  repair.rs  sampling.rs  system_prompt.rs  token_utils.rs  working_memory.rs
crates/y-context/tests/: integration.rs
crates/y-core/: Cargo.toml
crates/y-core/src/: agent.rs  checkpoint.rs  embedding.rs  error.rs  file_mutation.rs  hook.rs  lib.rs  memory.rs  permission_types.rs  platform.rs  provider.rs  runtime.rs  session.rs  session_event.rs  skill.rs  template.rs  tool.rs  trust.rs  types.rs
crates/y-core/tests/: tool_runtime_event.rs
crates/y-diagnostics/: Cargo.toml
crates/y-diagnostics/src/: context.rs  cost.rs  events.rs  lib.rs  pg_trace_store.rs  replay.rs  search.rs  sqlite_trace_store.rs  subscriber.rs  trace_store.rs  types.rs
crates/y-guardrails/: Cargo.toml
crates/y-guardrails/src/: capability_gap.rs  config.rs  error.rs  hitl.rs  lib.rs  loop_guard.rs  mode_manager.rs  permission.rs  permission_pipeline.rs  risk.rs  rule_store.rs  structural.rs  taint.rs
crates/y-gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
crates/y-hooks/: Cargo.toml
crates/y-hooks/benches/: hooks_bench.rs
crates/y-hooks/src/: chain.rs  chain_runner.rs  config.rs  error.rs  event_bus.rs  hook_handler.rs  hook_registry.rs  hook_system.rs  lib.rs  plugin.rs
crates/y-hooks/tests/: chain_integration_test.rs  event_integration_test.rs  hook_handler_integration_test.rs  hook_integration_test.rs
crates/y-journal/: Cargo.toml
crates/y-journal/src/: conflict.rs  error.rs  file_history.rs  hash.rs  lib.rs  middleware.rs  mutation_event_journal.rs  rollback.rs  storage.rs
crates/y-journal/tests/: mutation_event_journal.rs
crates/y-knowledge/: Cargo.toml
crates/y-knowledge/src/: bm25.rs  chunking.rs  classifier.rs  config.rs  error.rs  evaluation.rs  indexer.rs  lib.rs  maintenance.rs  metadata.rs  middleware.rs  models.rs  normalize.rs  observability.rs  progressive.rs  quality.rs  retrieval.rs  supported_formats.rs  tagger.rs  tokenizer.rs
crates/y-mcp/: Cargo.toml
crates/y-mcp/src/: auth.rs  client.rs  discovery.rs  error.rs  lib.rs  manager.rs  tool_adapter.rs  transport.rs
crates/y-multi-agent/: Cargo.toml
crates/y-multi-agent/src/: lib.rs
crates/y-provider/: Cargo.toml
crates/y-provider/src/: agent_runner.rs  config.rs  embedding.rs  error.rs  error_classifier.rs  freeze.rs  health.rs  hook_llm_runner.rs  http_headers.rs  inter_stream.rs  inter_stream_adapter.rs  lease.rs  lib.rs  metrics.rs  metrics_export.rs  net_error.rs  pool.rs  router.rs  scheduler.rs  sse.rs  tool_call_accumulator.rs
crates/y-runtime/: Cargo.toml
crates/y-runtime/src/: audit.rs  capability.rs  cleanup.rs  config.rs  docker.rs  error.rs  image_whitelist.rs  integration.rs  lib.rs  manager.rs  native.rs  platform.rs  resource_monitor.rs  security_policy.rs  ssh.rs  venv.rs  worktree.rs
crates/y-runtime/tests/: tool_runtime_events.rs
crates/y-scheduler/: Cargo.toml
crates/y-scheduler/src/: config.rs  cron.rs  dispatcher.rs  event.rs  event_bridge.rs  executor.rs  interval.rs  lib.rs  manager.rs  onetime.rs  params.rs  queue.rs  recovery.rs  store.rs  trigger.rs
crates/y-service/: Cargo.toml
crates/y-service/knowledge/: knowledge_collections.json
crates/y-service/src/: agent_management.rs  agent_service.rs  app_config.rs  background_tasks.rs  background_wake.rs  bot.rs  capability_reuse.rs  capability_search.rs  chat.rs  chat_types.rs  chat_worker.rs  compaction_prefire.rs  config.rs  config_service.rs  container.rs  context_optimization.rs  cost.rs  diagnostics.rs  dynamic_agent_refinement.rs  dynamic_agent_service.rs  dynamic_tool_service.rs  event_sink.rs  evolution_feedback.rs  hook_agent_runner.rs  init.rs  knowledge_context_retrieval.rs  knowledge_service.rs  lib.rs  loop_orchestrator.rs  mcp_service.rs  message_builder.rs  observability.rs  orchestrator_dispatcher.rs  plan_mode_orchestrator.rs  plan_orchestrator.rs  prompt_templates.rs  rewind.rs  scheduler_service.rs  session_events.rs  skill_creation.rs  (+19 more)
crates/y-service/tests/: capability_pack_transaction.rs  capability_pack_validation.rs  capability_reuse.rs  dynamic_agent_refinement.rs  dynamic_agent_service.rs  dynamic_tool_service.rs  evolution_feedback.rs  knowledge_context_retrieval.rs  session_event_service.rs  skill_evolution_refinement.rs  tool_runtime_event_service.rs  workflow_run_service.rs
crates/y-session/: Cargo.toml
crates/y-session/src/: canonical.rs  (+8 more)
crates/y-skills/: Cargo.toml
crates/y-storage/: Cargo.toml
crates/y-test-utils/: Cargo.toml
crates/y-tools/: Cargo.toml
crates/y-web/: Cargo.toml
(+1120 files in other folders)
