[workspace]
resolver = "2"
members = [
    "crates/y-core",
    "crates/y-provider",
    "crates/y-session",
    "crates/y-agent-core",
    "crates/y-context",
    "crates/y-hooks",
    "crates/y-tools",
    "crates/y-mcp",
    "crates/y-skills",
    "crates/y-prompt",
    "crates/y-storage",
    "crates/y-runtime",
    "crates/y-scheduler",
    "crates/y-multi-agent",
    "crates/y-guardrails",
    "crates/y-knowledge",
    "crates/y-journal",
    "crates/y-diagnostics",
    "crates/y-cli",
    "crates/y-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gorgias/y-agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON Schema validation
jsonschema = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
mockall = "0.13"

# Internal crates
y-core = { path = "crates/y-core" }
y-provider = { path = "crates/y-provider" }
y-session = { path = "crates/y-session" }
y-agent-core = { path = "crates/y-agent-core" }
y-context = { path = "crates/y-context" }
y-hooks = { path = "crates/y-hooks" }
y-tools = { path = "crates/y-tools" }
y-mcp = { path = "crates/y-mcp" }
y-skills = { path = "crates/y-skills" }
y-prompt = { path = "crates/y-prompt" }
y-storage = { path = "crates/y-storage" }
y-runtime = { path = "crates/y-runtime" }
y-scheduler = { path = "crates/y-scheduler" }
y-multi-agent = { path = "crates/y-multi-agent" }
y-guardrails = { path = "crates/y-guardrails" }
y-knowledge = { path = "crates/y-knowledge" }
y-journal = { path = "crates/y-journal" }
y-diagnostics = { path = "crates/y-diagnostics" }
y-cli = { path = "crates/y-cli" }
y-test-utils = { path = "crates/y-test-utils" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
undocumented_unsafe_blocks = "deny"
