[workspace]
resolver = "2"
members = [
    "crates/y-core",
    "crates/y-provider",
    "crates/y-session",

    "crates/y-context",
    "crates/y-hooks",
    "crates/y-tools",
    "crates/y-mcp",
    "crates/y-skills",
    "crates/y-prompt",
    "crates/y-storage",
    "crates/y-runtime",
    "crates/y-scheduler",

    "crates/y-agent",
    "crates/y-guardrails",
    "crates/y-knowledge",
    "crates/y-journal",
    "crates/y-diagnostics",
    "crates/y-service",
    "crates/y-web",
    "crates/y-cli",
    "crates/y-test-utils",
    "crates/y-gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gorgias/y-agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }
croner = "2"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }

# Web API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Docker
bollard = "0.18"
futures-util = "0.3"

# JSON Schema validation
jsonschema = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
criterion = { version = "0.5", features = ["async_tokio"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
unicode-width = "0.2"

# Internal crates
y-core = { path = "crates/y-core" }
y-provider = { path = "crates/y-provider" }
y-session = { path = "crates/y-session" }

y-context = { path = "crates/y-context" }
y-hooks = { path = "crates/y-hooks" }
y-tools = { path = "crates/y-tools" }
y-storage = { path = "crates/y-storage" }
y-runtime = { path = "crates/y-runtime" }

y-agent = { path = "crates/y-agent" }
y-guardrails = { path = "crates/y-guardrails" }
y-skills = { path = "crates/y-skills" }
y-prompt = { path = "crates/y-prompt" }
y-diagnostics = { path = "crates/y-diagnostics" }
y-service = { path = "crates/y-service" }
y-web = { path = "crates/y-web" }
y-test-utils = { path = "crates/y-test-utils" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
undocumented_unsafe_blocks = "deny"
