[workspace]
resolver = "2"
members = [
    "crates/y-core",
    "crates/y-provider",
    "crates/y-session",

    "crates/y-context",
    "crates/y-hooks",
    "crates/y-tools",
    "crates/y-mcp",
    "crates/y-skills",
    "crates/y-prompt",
    "crates/y-storage",
    "crates/y-runtime",
    "crates/y-scheduler",

    "crates/y-agent",
    "crates/y-guardrails",
    "crates/y-knowledge",
    "crates/y-journal",
    "crates/y-diagnostics",
    "crates/y-service",
    "crates/y-bot",
    "crates/y-browser",
    "crates/y-web",
    "crates/y-cli",
    "crates/y-test-utils",
    "crates/y-gui/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gorgias/y-agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing / Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hex = "0.4"
chardetng = "0.1"
encoding_rs = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }
croner = "2"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
    "json",
] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }

# Web API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Docker
bollard = "0.18"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Encoding
base64 = "0.22"

# JSON Schema validation
jsonschema = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
criterion = { version = "0.5", features = ["async_tokio"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
unicode-width = "0.2"

# Internal crates
y-core = { path = "crates/y-core" }
y-provider = { path = "crates/y-provider" }
y-session = { path = "crates/y-session" }

y-context = { path = "crates/y-context" }
y-hooks = { path = "crates/y-hooks" }
y-tools = { path = "crates/y-tools" }
y-storage = { path = "crates/y-storage" }
y-runtime = { path = "crates/y-runtime" }
y-knowledge = { path = "crates/y-knowledge" }
y-scheduler = { path = "crates/y-scheduler" }

y-agent = { path = "crates/y-agent" }
y-guardrails = { path = "crates/y-guardrails" }
y-journal = { path = "crates/y-journal" }
y-skills = { path = "crates/y-skills" }
y-prompt = { path = "crates/y-prompt" }
y-diagnostics = { path = "crates/y-diagnostics" }
y-service = { path = "crates/y-service" }
y-bot = { path = "crates/y-bot" }
y-browser = { path = "crates/y-browser" }
y-web = { path = "crates/y-web" }
y-test-utils = { path = "crates/y-test-utils" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
# Numeric casts between f64/u64/u32 are unavoidable in metrics, scoring, and
# resource monitoring code. Rust stable provides no lossless conversion API for
# these types, so the `as` keyword must be used with appropriate bounds-checking.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
# Fields sharing a common suffix (e.g. `_store`) is a natural naming convention
# for dependency-injection structs. The lint adds no value here.
struct_field_names = "allow"
# Tauri command handlers receive each parameter directly from the frontend
# invoke() call, making struct grouping impractical. Several commands naturally
# exceed 10 parameters.
too_many_arguments = "allow"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
# False positive in `futures::stream::unfold` patterns: `state.done = true`
# before returning `None` appears unused to the linter, but the assignment IS
# read by the next iteration via the `state` parameter.
unused_assignments = "allow"
