[package]
name = "y-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified Agent Framework: orchestrator (DAG engine, channels, checkpointing) + agent lifecycle (definitions, registry, pool, delegation)"

[features]
default = []
dynamic_agent_persistence = []
dynamic_agent_evolution = ["dynamic_agent_persistence"]

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true

[[test]]
name = "persistent_dynamic_store"
path = "tests/persistent_dynamic_store.rs"
required-features = ["dynamic_agent_persistence"]

[[test]]
name = "persistent_dynamic_proposals"
path = "tests/persistent_dynamic_proposals.rs"
required-features = ["dynamic_agent_evolution"]
