[package]
name = "y-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for y-agent"

[[bin]]
name = "y-agent"
path = "src/main.rs"
doc = false

[dependencies]
y-core = { workspace = true }
y-agent = { workspace = true }
y-service = { workspace = true }

# Kept as direct dependencies because CLI commands use concrete types from these crates.
y-skills = { workspace = true, features = [
    "skill_ingestion",
    "skill_transformation",
    "skill_security_screening",
    "skill_linkage",
] }
y-diagnostics = { workspace = true }
y-web = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# TUI dependencies (optional, behind `tui` feature flag)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
tui-textarea = { workspace = true, optional = true }
unicode-width = { workspace = true, optional = true }
arboard = { version = "3", optional = true, default-features = false }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "tui-textarea", "unicode-width", "arboard"]
hook_handlers = ["y-service/hook_handlers"]
llm_hooks = ["y-service/llm_hooks"]

[dev-dependencies]
y-test-utils = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }
sqlx = { workspace = true }

[[bench]]
name = "e2e_bench"
harness = false

[lints]
workspace = true
