[package]
name = "y-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context assembly pipeline, compaction, memory recall"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
y-prompt = { workspace = true }
y-hooks = { version = "0.1.0", path = "../y-hooks" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
