[package]
name = "y-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core abstractions and traits for y-agent"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
