[package]
name = "y-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diagnostics: trace store, cost intelligence, trace replay (SQLite-backed)"

[features]
default = []

[dependencies]
y-core = { workspace = true }
y-storage = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
