[package]
name = "y-guardrails"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Guardrails, LoopGuard, taint tracking, risk scoring, HITL"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
