[package]
name = "y-guardrails"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Guardrails, LoopGuard, taint tracking, risk scoring, HITL"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
starlark = { workspace = true }
multimap = { workspace = true }
parking_lot = "0.12"
fs2 = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
