[package]
name = "y-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hook system, middleware chains, async event bus, hook handlers"

[features]
default = ["hooks_enabled", "event_bus", "middleware_chains", "hook_handlers"]
hooks_enabled = []
event_bus = []
middleware_chains = []
hook_handlers = ["dep:reqwest", "dep:regex"]
llm_hooks = ["dep:y-provider", "hook_handlers"]

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, optional = true }
regex = { version = "1", optional = true }
y-provider = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
async-trait = { workspace = true }
toml = "0.8"
temp-env = "0.3"

[[bench]]
name = "hooks_bench"
harness = false

[lints]
workspace = true
