[package]
name = "y-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File Journal: FileJournalMiddleware, three-tier storage, rollback"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono.workspace = true
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
