[package]
name = "y-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Knowledge Base: external ingestion, domain-classified indexing"

[features]
default = []
vector_qdrant = ["dep:qdrant-client"]

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
jieba-rs = "0.7"
qdrant-client = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true

