[package]
name = "y-multi-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-Agent: AgentDefinition, delegation, AgentPool"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
