[package]
name = "y-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider pool: LLM communication, routing, freeze/thaw, metrics"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml = { workspace = true }

[lints]
workspace = true
