[package]
name = "y-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skill ingestion, transformation, registry, versioning"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[features]
default = ["skill_core"]
skill_core = []               # Core registry + version control (always on)
skill_ingestion = []          # LLM-assisted ingestion pipeline
skill_transformation = []     # Transformation engine
skill_security_screening = [] # Security screener
skill_linkage = []            # Cross-resource linker
skill_lazy_loading = []       # Lazy sub-document loading
evolution_capture = []        # Experience capture
evolution_extraction = []     # LLM-assisted pattern extraction
evolution_refinement = []     # Proposal generation
evolution_fast_path = []      # Real-time fast-path extraction
skill_usage_audit = []        # Per-retrieval usage tracking

[lints]
workspace = true
