[package]
name = "y-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence layer: SQLite + optional PostgreSQL backends, JSONL writers"

[features]
default = ["diagnostics_pg"]
diagnostics_pg = ["sqlx/postgres"]

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
toml = { workspace = true }

[lints]
workspace = true
