[package]
name = "y-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared test utilities, mocks, and fixtures for y-agent"

[dependencies]
y-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
