[package]
name = "y-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool Registry: 4 types, lazy loading, JSON Schema validation"

[dependencies]
y-core = { workspace = true }
y-hooks = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
